<resources>
    <string name="app_name">Fray_RentACar</string>
    <string name="contra">Contraseña</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="password">Contraseña</string>
    <string name="logo">logo</string>
    <string name="mensaje">¿Ha olvidado su contraseña?</string>
    <string name="iniciarSesion">Iniciar Sesión</string>
    <string name="registrarse">Registrarse</string>
    <string name="logoregistrarse">logoRegistrarse</string>
    <string name="nombre">Nombre completo</string>
    <string name="nombre_usuario">Nombre de usuario</string>
    <string name="correo_electronico">Correo electronico</string>
    <string name="telefono">Telefono</string>
    <string name="contrase_a">Contraseña</string>
    <string name="confirmar_contrase_a">Confirmar contraseña</string>
    <string name="confirmar_registro">Confirmar registro</string>
    <string name="title_activity_home">Home</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_cuenta">Cuenta</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="titulo_home">Menú principal</string>
    <string name="busca_un_vehiculo">Busca un vehiculo</string>
    <string name="standard_56">Standard 56</string>
    <string name="prestige_22">Prestige 22</string>
    <string name="suv_34">SUV 34</string>
    <string name="toyota_350">TOYOTA $350</string>
    <string name="proximamente">Más proximamente</string>
    <string name="vehiculos_disponibles">Vehiculos disponibles</string>
    <string name="hyundai_250">HYUNDAI $250</string>
    <string name="titulo_AyudaYAsistencia">Ayuda y asistencia</string>
    <string name="politicas_de_privacidad">Políticas de privacidad</string>
    <string name="back_button">back_button</string>
    <string name="contactanos">Contactanos</string>
    <string name="terminos_y_condiciones">Terminos y condiciones</string>
    <string name="ayuda">Ayuda</string>
    <string name="acerca_de">Acerca de</string>
    <string name="terminos_del_servicio">Terminos del servicio</string>
    <string name="condiciones_de_asistencia">Condiciones de asistencia</string>
    <string name="condiciones_de_seguro">Condiciones de seguro</string>
    <string name="condiciones_de_uso">Condiciones de uso</string>
    <string name="contraseña">Contraseña</string>
    <string name="btntelefono">Teléfono</string>
    <string name="btnUsuario">Nombre de usuario</string>
    <string name="btnNombre">Nombre completo</string>
    <string name="informacion_basica">Información básica</string>
    <string name="titulo_perfil">Mi perfil</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="ayuda_y_asistencia">Ayuda y asistencia</string>
    <string name="mi_perfil">Mi perfil</string>
    <string name="titulo_ajustes">Ajustes</string>
    <string name="titulo_sucursales">Sucursales disponibles</string>
    <string name="lista_de_vehiculos">Lista de vehiculos</string>
    <string name="titulo_alquileres">Mis alquileres</string>
    <string name="alquileres_vacios">No hay ningún alquiler por ahora</string>
    <string name="emptyRents">empty_rents_img</string>
    <string name="addbutton">addButton</string>
</resources>