<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titulo_alquileres"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/emptyRents"
            android:src="@drawable/union" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/alquileres_vacios"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="25sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_alignBottom="@id/bottom_nav"
        android:layout_marginBottom="59dp"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_button"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:contentDescription="@string/addbutton"
            android:gravity="center_vertical"
            app:backgroundTint="@color/btnColor"
            app:cornerRadius="200dp"
            app:icon="@drawable/ic_baseline_add_24"
            app:iconSize="48dp"
            android:onClick="Añadir"/>

    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/ic_logoRentACar_background"
        android:layout_alignParentBottom="true"
        app:itemIconTint="@color/nav_icon_colors"
        app:itemTextColor="@color/nav_text_colors"
        app:menu="@menu/bottom_nav_menu" />

</RelativeLayout>